--- a/index/confirm-estore/index.html
+++ b/index/confirm-estore/index.html
@@ -10,6 +10,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <!--Page StyleSheets-->
     <link rel="stylesheet" href="./index.css"/>
+    <script src="../../assets/jquery.min.js"></script>
 </head>
 <body>
 
@@ -27,8 +28,61 @@
     <area id="J_Contacts" shape="rect" href="../contacts/index.html"/>
 </map>
 
+<script>
+    (function () {
+        var img = $('#J_Background');
+        var width = img.width();
+        var height = img.height();
 
-<script src="../../assets/jquery.min.js"></script>
-<script src="./index.js"></script>
+        var x1 = width * 0.08;
+        var y1 = height * 0.07;
+        var x2 = width * 0.16;
+        var y2 = height * 0.11;
+
+        var menuArea = $('#J_MenuArea');
+        menuArea.attr('coords', [x1,y1,x2,y2].join(','));
+
+        var menuImg = $('#J_Menu');
+        var menuWidth = menuImg.width();
+        var menuHeight = menuImg.height();
+
+        var menuX1 = menuWidth * 0;
+        var menuY1 = menuHeight * 0;
+        var menuX2 = menuWidth * 1;
+        var menuY2 = menuHeight * 0.25;
+
+        var homePage = $('#J_HomePage');
+        homePage.attr('coords', [menuX1,menuY1,menuX2,menuY2].join(','));
+
+        menuX1 = menuWidth * 0;
+        menuY1 = menuHeight * 0.25;
+        menuX2 = menuWidth * 1;
+        menuY2 = menuHeight * 0.5;
+
+        var eStore = $('#J_EStore');
+        eStore.attr('coords', [menuX1,menuY1,menuX2,menuY2].join(','));
+
+        menuX1 = menuWidth * 0;
+        menuY1 = menuHeight * 0.5;
+        menuX2 = menuWidth * 1;
+        menuY2 = menuHeight * 0.75;
+
+        var community = $('#J_Community');
+        community.attr('coords', [menuX1,menuY1,menuX2,menuY2].join(','));
+
+        menuX1 = menuWidth * 0;
+        menuY1 = menuHeight * 0.75;
+        menuX2 = menuWidth * 1;
+        menuY2 = menuHeight * 1;
+
+        var contacts = $('#J_Contacts');
+        contacts.attr('coords', [menuX1,menuY1,menuX2,menuY2].join(','));
+
+        menuArea.bind('click', function () {
+            menuImg.show();
+        });
+    })();
+</script>
+
 </body>
 </html>
