--- a/index/home/index.html
+++ b/index/home/index.html
@@ -10,11 +10,17 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <!--Page StyleSheets-->
     <link rel="stylesheet" href="./index.css"/>
+    <script src="../../assets/jquery.min.js"></script>
 </head>
 <body>
 
+<script>
+    (function () {
+        setTimeout(function () {
+            location.href = '../index/index.html';
+        }, 2000);
+    })();
+</script>
 
-<script src="../../assets/jquery.min.js"></script>
-<script src="./index.js"></script>
 </body>
 </html>
