--- a/index/index/index.html
+++ b/index/index/index.html
@@ -10,6 +10,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <!--Page StyleSheets-->
     <link rel="stylesheet" href="./index.css"/>
+    <script src="../../assets/jquery.min.js"></script>
 </head>
 <body>
 
@@ -19,8 +20,29 @@
     <area id="J_EStoreArea" shape="rect" href="../estore-hello/index.html"/>
 </map>
 
+<script>
+    (function () {
+        var img = $('img');
+        var width = img.width();
+        var height = img.height();
 
-<script src="../../assets/jquery.min.js"></script>
-<script src="./index.js"></script>
+        var x1 = width * 0.1;
+        var y1 = height * 0.07;
+        var x2 = width * 0.32;
+        var y2 = height * 0.2;
+
+        var iconArea = $('#J_IconArea');
+        iconArea.attr('coords', [x1,y1,x2,y2].join(','));
+
+        x1 = width * 0.41;
+        y1 = height * 0.9;
+        x2 = width * 0.59;
+        y2 = height * 1;
+
+        var eStoreArea = $('#J_EStoreArea');
+        eStoreArea.attr('coords', [x1,y1,x2,y2].join(','));
+    })();
+</script>
+
 </body>
 </html>
