--- a/index/community/index.html
+++ b/index/community/index.html
@@ -83,6 +83,7 @@
             };
 
             menuHandler();
+            menuImg.bind('load', menuHandler);
 
             menuArea.bind('click', function () {
                 menuImg.show();
