--- a/index/contacts/index.html
+++ b/index/contacts/index.html
@@ -84,6 +84,7 @@
             };
 
             menuHandler();
+            menuImg.bind('load', menuHandler);
 
             menuArea.bind('click', function () {
                 menuImg.show();
