--- a/index/estore/index.html
+++ b/index/estore/index.html
@@ -102,6 +102,7 @@
             };
 
             menuHandler();
+            menuImg.bind('load', menuHandler);
 
             menuArea.bind('click', function () {
                 menuImg.show();
