--- a/index/index/index.html
+++ b/index/index/index.html
@@ -16,7 +16,7 @@
 
 <img src="../../assets/img/index.jpg" alt="" style="width:100%;" usemap="#index"/>
 <map name="index">
-    <area id="J_IconArea" shape="rect" href="javascript:;">
+    <area id="J_NameArea" shape="rect" href="../index2/index.html">
     <area id="J_EStoreArea" shape="rect" href="../estore-hello/index.html"/>
     <area id="J_Contacts" shape="rect" href="../contacts/index.html"/>
     <area id="J_Community" shape="rect" href="../community/index.html"/>
@@ -30,13 +30,13 @@
             var width = img.width();
             var height = img.height();
 
-            var x1 = width * 0.1;
-            var y1 = height * 0.07;
-            var x2 = width * 0.32;
-            var y2 = height * 0.2;
+            var x1 = width * 0.5;
+            var y1 = height * 0;
+            var x2 = width * 0.8;
+            var y2 = height * 0.1;
 
-            var iconArea = $('#J_IconArea');
-            iconArea.attr('coords', [x1,y1,x2,y2].join(','));
+            var nameArea = $('#J_NameArea');
+            nameArea.attr('coords', [x1,y1,x2,y2].join(','));
 
             x1 = width * 0.41;
             y1 = height * 0.9;
