--- a/index/community/index.html
+++ b/index/community/index.html
@@ -17,7 +17,7 @@
 <img id="J_Background" src="../../assets/img/community.jpg" style="width:100%;" usemap="#index" hidefocus="true"/>
 <map name="index">
     <area id="J_MenuArea" shape="rect" href="javascript:;">
-    <!--onfocus="blur(this);"-->
+    <area id="J_Community2Area" shape="rect" href="../community2/index.html">
 </map>
 
 <img id="J_Menu" class="menu" src="../../assets/img/menu.jpg" usemap="#menu" hidefocue="true"/>
@@ -36,12 +36,20 @@
             var height = img.height();
 
             var x1 = width * 0.08;
-            var y1 = height * 0.07;
+            var y1 = height * 0.03;
             var x2 = width * 0.16;
-            var y2 = height * 0.11;
+            var y2 = height * 0.07;
 
             var menuArea = $('#J_MenuArea');
             menuArea.attr('coords', [x1,y1,x2,y2].join(','));
+
+            x1 = width * 0.88;
+            y1 = height * 0.03;
+            x2 = width * 0.96;
+            y2 = height * 0.07;
+
+            var community2Area = $('#J_Community2Area');
+            community2Area.attr('coords', [x1,y1,x2,y2].join(','));
 
             var menuImg = $('#J_Menu');
 
