--- a/index/pay-estore/index.html
+++ b/index/pay-estore/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
 
-<img id="J_Background" src="../../assets/img/confirm-estore.jpg" style="width:100%;" usemap="#index" hidefocus="true"/>
+<img id="J_Background" src="../../assets/img/pay-estore.jpg" style="width:100%;" usemap="#index" hidefocus="true"/>
 <map name="index">
     <area id="J_MenuArea" shape="rect" href="javascript:;">
-    <area id="J_SuccessArea" shape="rect" href="../success-estore/index.html">
+    <area id="J_ConfirmArea" shape="rect" href="../confirm-estore/index.html">
 </map>
 
 <img id="J_Menu" class="menu" src="../../assets/img/menu.jpg" usemap="#menu" hidefocue="true"/>
@@ -44,13 +44,13 @@
             var menuArea = $('#J_MenuArea');
             menuArea.attr('coords', [x1,y1,x2,y2].join(','));
 
-            x1 = width * 0.66;
-            y1 = height * 0.88;
-            x2 = width * 0.98;
-            y2 = height * 0.95;
+            x1 = width * 0.09;
+            y1 = height * 0.68;
+            x2 = width * 0.52;
+            y2 = height * 0.75;
 
-            var successArea = $('#J_SuccessArea');
-            successArea.attr('coords', [x1,y1,x2,y2].join(','));
+            var confirmArea = $('#J_ConfirmArea');
+            confirmArea.attr('coords', [x1,y1,x2,y2].join(','));
 
             var menuImg = $('#J_Menu');
 
